--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
