--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-PORT = 5000
+PORT=5000
 EMAIL_USER="contactsnewsplus@gmail.com"
 EMAIL_PASS="weje gzli hqwj rsir"
 EMAIL_FROM="contactsnewsplus@gmail.com"
-CLIENT_URL="https://newspluslive.netlify.app"
+REACT_APP_FRONTEND_URL="http://localhost:3000"
